syntax = 'proto3';

package auth;

message RpcRegisterUser {
  string email = 1;
  string password = 2;
}

message RpcRefreshToken {
  string token = 1;
}

message RpcUser {
  string email = 1;
  bool isActive = 2;
}

service AuthService {
  rpc register (RpcRegisterUser) returns (RpcUser) {}
  rpc login (RpcRegisterUser) returns (RpcUser) {}
  rpc refreshToken (RpcRefreshToken) returns (RpcRefreshToken) {}
}


